# smol-boot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  book.toml
.github/workflows/: ci.yml
.zed/: settings.json
bootloader/: Cargo.toml  build.rs
bootloader/src/: main.rs
ch32/: Cargo.toml  tb-run-mode.x
ch32/app/: Cargo.toml
ch32/boot/: Cargo.toml
ch32/hal/: Cargo.toml
ch32/rt/: build.rs
ch32/src/: lib.rs
ch32/src/app/: mod.rs
ch32/src/boot/: mod.rs
ch32/src/boot/platform/: boot_ctl.rs  boot_meta_store.rs  mod.rs  storage.rs
ch32/src/boot/platform/transport/usart/: mod.rs
ch32/src/hal/afio/: mod.rs
ch32/src/hal/flash/: mod.rs  v00x.rs
ch32/src/hal/pfic/: rv2.rs  rv3.rs
ch32/src/hal/rcc/: mod.rs  v00x.rs
ch32/src/platform/boot_ctl/: mod.rs
ch32/src/platform/boot_ctl/boot_request/: mod.rs
ch32/src/platform/boot_ctl/hand_off/: mod.rs
ch32/src/platform/boot_ctl/run_mode/: ram.rs
cli/: Cargo.toml
cli/src/: client.rs
core/: Cargo.toml  build.rs
core/src/: boot.rs  lib.rs  log.rs
docs/: README.md  SUMMARY.md  boot-ctl.md  demo.tape  demo.webm  examples.md  flash-modes.md  porting-series.md  porting.md
examples/ch32/system-flash/: README.md
examples/ch32/system-flash/app/: Cargo.toml  build.rs
examples/ch32/system-flash/app/src/: main.rs  transport.rs
examples/ch32/system-flash/boot/: Cargo.toml  memory.x
examples/ch32/system-flash/boot/src/: main.rs
examples/ch32/user-flash/: README.md
examples/ch32/user-flash/app/: Cargo.toml  memory.x
examples/ch32/user-flash/app/src/: main.rs
examples/ch32/user-flash/boot/: Cargo.toml  memory.x
examples/ch32/user-flash/boot/src/: main.rs
examples/ch32/v003/app/: Cargo.toml
examples/ch32/v003/app/memory_x/: user-flash.x
examples/ch32/v003/app/src/: main.rs
examples/ch32/v003/boot/: Cargo.toml
examples/ch32/v003/boot/memory_x/: user-flash.x
examples/ch32/v003/boot/src/: main.rs
examples/ch32/v00x/: Cargo.toml
examples/ch32/v00x/.cargo/: config.toml
examples/ch32/v00x/app/: Cargo.toml  build.rs
examples/ch32/v00x/app/memory_x/ch32v002x4x6/: system-flash.x  user-flash.x
examples/ch32/v00x/app/memory_x/ch32v004x6x1/: system-flash.x  user-flash.x
examples/ch32/v00x/app/memory_x/ch32v005x6x6/: system-flash.x  user-flash.x
examples/ch32/v00x/app/memory_x/ch32v006x8x6/: standalone.x  system-flash.x  user-flash.x
examples/ch32/v00x/app/memory_x/ch32v007x8x6/: system-flash.x  user-flash.x
examples/ch32/v00x/app/src/: main.rs
examples/ch32/v00x/boot/: Cargo.toml  build.rs
examples/ch32/v00x/boot/memory_x/ch32v002x4x6/: system-flash.x  user-flash.x
examples/ch32/v00x/boot/memory_x/ch32v004x6x1/: system-flash.x  user-flash.x
examples/ch32/v00x/boot/memory_x/ch32v005x6x6/: system-flash.x  user-flash.x
examples/ch32/v00x/boot/memory_x/ch32v006x8x6/: system-flash.x  user-flash.x
examples/ch32/v00x/boot/memory_x/ch32v007x8x6/: system-flash.x  user-flash.x
examples/ch32/v00x/boot/src/: main.rs
examples/ch32/v103/app/: Cargo.toml
examples/ch32/v103/app/memory_x/: system-flash.x  user-flash.x
examples/ch32/v103/app/src/: main.rs
examples/ch32/v103/boot/: Cargo.toml
examples/ch32/v103/boot/memory_x/: system-flash.x  user-flash.x
examples/ch32/v103/boot/src/: main.rs
lib/: Cargo.toml
lib/core/: Cargo.toml
lib/core/src/: app.rs  core.rs  lib.rs  platform.rs  protocol.rs  traits.rs
lib/core/tests/: state_transitions.rs
lib/protocol/: Cargo.toml
lib/protocol/src/: frame.rs  lib.rs
scripts/: pre-commit
smol-boot-ch32/: Cargo.toml
smol-boot-ch32/src/: lib.rs
smol-boot-ch32/src/hal/: mod.rs  uart.rs
smol-boot-ch32/src/hal/flash/: mod.rs  v0.rs
smol-boot-ch32/src/hal/transport/usart/: usart_common.rs
tiny-boot-ch32/examples/bootloader/: Cargo.toml
tiny-boot-ch32/examples/bootloader/src/: main.rs
tiny-boot-ch32/src/: lib.rs
tiny-boot-ch32/src/hal/transport/usart/: mod.rs
tiny-boot-ch32/src/platform/: boot_ctl.rs
tiny-boot/src/: lib.rs  traits.rs
tinyboot/: Cargo.toml  README.md
tinyboot-ch32/: Cargo.toml  boot_request.x  build.rs  link.x
tinyboot-ch32-app/: Cargo.toml  README.md  build.rs  tinyboot.x
tinyboot-ch32-app/src/: lib.rs
tinyboot-ch32-boot/: Cargo.toml  README.md  link.x
tinyboot-ch32-boot/src/: lib.rs
tinyboot-ch32-boot/src/platform/: boot_ctl.rs  boot_state.rs  mod.rs  storage.rs
tinyboot-ch32-boot/src/platform/transport/usart/: mod.rs
tinyboot-ch32-boot/src/rt/: v2.S
tinyboot-ch32-hal/: Cargo.toml  README.md  build.rs
tinyboot-ch32-hal/src/: lib.rs
tinyboot-ch32-hal/src/afio/: v0.rs
tinyboot-ch32-hal/src/flash/: mod.rs  v0.rs
tinyboot-ch32-hal/src/gpio/: v0.rs
tinyboot-ch32-hal/src/pfic/: rv2.rs
tinyboot-ch32-hal/src/rcc/: v0.rs
tinyboot-ch32-hal/src/usart/: usart_common.rs
tinyboot-ch32/examples/app-a/: Cargo.toml  build.rs
tinyboot-ch32/examples/app-a/.cargo/: config.toml
tinyboot-ch32/examples/app-a/src/: main.rs
tinyboot-ch32/examples/app-b/: Cargo.toml
tinyboot-ch32/examples/app-b/src/: main.rs
tinyboot-ch32/examples/bootloader/: Cargo.toml
tinyboot-ch32/examples/bootloader/src/: main.rs
tinyboot-ch32/examples/system-flash/: README.md
tinyboot-ch32/examples/user-flash/: README.md
tinyboot-ch32/src/: app.rs  lib.rs
tinyboot-ch32/src/boot/: mod.rs
tinyboot-ch32/src/boot/platform/: boot_ctl.rs  boot_state.rs  storage.rs
tinyboot-ch32/src/boot/platform/transport/: rs485.rs
tinyboot-ch32/src/hal/: boot_request.rs  mod.rs
tinyboot-ch32/src/hal/flash/: mod.rs  v0.rs
tinyboot-ch32/src/hal/pfic/: rv2.rs
tinyboot-cli/: Cargo.toml  README.md
tinyboot-cli/src/: client.rs  main.rs
tinyboot-protocol/: Cargo.toml  README.md
tinyboot-protocol/src/: frame.rs  lib.rs  sync.rs
tinyboot/src/: core.rs  lib.rs  protocol.rs  ringbuf.rs  traits.rs
tinyboot/src/traits/: app.rs  boot.rs  mod.rs
tinyboot/tests/: state_transitions.rs
