[package]
name = "smol-boot-ch32"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["pac"] }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }

smol-boot = { path = "../smol-boot" }

[build-dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["metadata"] }

[features]
default = ["ch32v003f4p6", "memory-x"]

# supported chip variants
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]

# auto-generate memory.x from ch32-metapac metadata.
# disable to provide your own memory.x.
memory-x = []

# logging
defmt = ["smol-boot/defmt"]

# boot behavior
require-app = ["smol-boot/require-app"]
