[package]
name = "tinyboot-protocol"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }

[features]
default = []
defmt = ["dep:defmt"]
