[package]
name = "tinyboot"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }
tinyboot-protocol = { path = "../tinyboot-protocol" }

[features]
default = []
defmt = ["dep:defmt", "tinyboot-protocol/defmt"]
