[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tinyboot-ch32-app = { path = "../../../../tinyboot-ch32-app", features = ["ch32v003f4p6", "system-flash", "defmt"] }

embedded-io = "0.7"
embedded-io-async = "0.7"
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", features = ["ch32v003f4p6", "rt", "memory-x", "embassy", "time-driver-tim1"] }
embassy-executor = { version = "0.9", features = ["arch-spin", "executor-thread"] }
embassy-time = "0.5"
qingke = "0.6"
qingke-rt = { version = "0.6", features = ["v2"] }
panic-halt = "1.0"

defmt = "1.0"
defmt-rtt = "1.1"
