[package]
name = "boot"
version = "1.2.3"
edition.workspace = true

[dependencies]
tinyboot-ch32 = { path = "../../../../ch32", default-features = false }
tinyboot-ch32-rt = { path = "../../../../ch32/rt" }
panic-halt = "1.0"

[features]
default = ["ch32v003f4p6", "system-flash"]
system-flash = ["tinyboot-ch32/system-flash"]
user-flash = []
ch32v003f4p6 = ["tinyboot-ch32/ch32v003f4p6"]
ch32v003a4m6 = ["tinyboot-ch32/ch32v003a4m6"]
ch32v003f4u6 = ["tinyboot-ch32/ch32v003f4u6"]
ch32v003j4m6 = ["tinyboot-ch32/ch32v003j4m6"]
